<resources>
    <string name="app_name">First Kotlin App</string>
    <string name="hello_world">Hello World!</string>
    <string name="change_text">Change text</string>
    <string name="hello_kotlin">Hello Kotlin!</string>
    <string name="current_time">Current time</string>
    <string name="get_time">Get time</string>
    <string name="print_cats">Print cats</string>
    <string name="Cat_column">Cat\nCat</string>
    <string name="data_form_data_class">data form Data class</string>
</resources>