<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_text"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_8dp"
        android:editable="false"
        android:text="@string/change_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/teal_200"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/button_stroke" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_hello"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btn_change_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_change_text"
        app:layout_constraintTop_toTopOf="@id/btn_change_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_current_time"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_8dp"
        android:text="@string/get_time"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_text"
        app:rippleColor="@color/teal_200"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/button_stroke" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_current_time"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btn_change_current_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_change_current_time"
        app:layout_constraintTop_toTopOf="@id/btn_change_current_time"
        tools:text="@string/current_time" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_print_cats"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_8dp"
        android:text="@string/print_cats"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_current_time"
        app:rippleColor="@color/teal_200"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/button_stroke" />

    <ScrollView
        android:layout_width="@dimen/zero_value"
        android:layout_height="@dimen/dim_55dp"
        android:layout_marginHorizontal="@dimen/dim_8dp"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical"
        android:padding="@dimen/dim_8dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_print_cats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_print_cats"
        app:layout_constraintTop_toTopOf="@id/btn_print_cats">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_print_cats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineProvider="paddedBounds"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/cats_list_text_size"
            tools:text="@string/Cat_column" />
    </ScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_data_class_description"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_40dp"
        android:layout_marginHorizontal="@dimen/dim_8dp"
        android:layout_marginBottom="@dimen/dim_8dp"
        android:gravity="center"
        android:text="@string/data_form_data_class"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_print_cats" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_data_from_data_class"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_8dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_data_class_description" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_data_from_data_class_2"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_8dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_data_from_data_class" />
</androidx.constraintlayout.widget.ConstraintLayout>